# Omnis_Moriatur_Manifest

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  pyproject.toml
.craft/: main.py
.craft/redrafting/2-DECLARATION/poems-of-human-programing/: Spatkobierca  bezduszni  bezsilność  blizny  memizm  porównawczo  praocean  przedpóźniej  refleksja  wizja  zawcześniej  zgaszony  zrozumienie
.craft/redrafting/3-TESTAMENT/: TABLICE_TECHNOPATERA.md
.obsidian/: appearance.json  community-plugins.json  core-plugins.json
1-REDEFINITION/: .laws-of-technomancy.md  .oath-of-technomancer.md  map.md
2-DECLARATION/poems-of-human-programing/: .__RECORD_FROM_TWITTER.txt  alienacja  atakowany  człowieczość  dreszcze  dusza  inicjatywnie  niemoc  pokój  samookreślanie  trapez
3-TESTAMENT/: refleksja_tablic_technopatera.md
